# foreign-whispers

./: CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tts_es.py
api/src/: main.py
api/src/core/: config.py
api/src/routers/: diarize.py  download.py  stitch.py  transcribe.py  tts.py
api/src/schemas/: pipeline.py  transcribe.py
api/src/services/: download_engine.py  tts_engine.py  tts_service.py
docs/: notebook-walkthrough.md
docs/superpowers/plans/: 2026-03-18-tts-alignment-wiring.md  2026-03-19-config-id.md
docs/superpowers/specs/: 2026-03-16-nextjs-frontend-design.md  2026-03-19-config-id-design.md  2026-03-19-logfire-instrumentation-design.md
foreign_whispers/: __init__.py  alignment.py  client.py  diarization.py  evaluation.py  reranking.py  voice_resolution.py
frontend/: next.config.ts
frontend/src/components/: pipeline-cards.tsx  pipeline-status-bar.tsx  pipeline-table.tsx  pipeline-tracker.tsx  video-selector.tsx
frontend/src/hooks/: use-pipeline.ts
frontend/src/lib/: api.ts  types.ts
notebooks/: foreign_whispers_pipeline.ipynb
notebooks/diarization_integration/: diarization_integration.ipynb
notebooks/tts_integration/: tts_integration.ipynb
tests/: test_stitch_router.py  test_tts_baseline_flag.py
