[project]
name = "foreign-whispers"
version = "0.1.0"
description = "Foreign Whispers: YouTube video dubbing pipeline (download, transcribe, translate, TTS, video stitching)"
license = { text = "LicenseRef-AGPL-3.0-only-with-Commons-Clause" }
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "TTS>=0.22.0",
    "yt-dlp",
    "youtube-transcript-api",
    "openai-whisper",
    "moviepy<2",
    "argostranslate",
    "streamlit",
    "fastapi>=0.115",
    "uvicorn[standard]",
    "python-multipart",
    "pydantic-settings",
    "pyrubberband",
    "librosa",
    "soundfile",
    "pydub",
    "requests",
    "setuptools<81",
    "pyyaml>=6.0.3",
    "logfire",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "nbconvert>=7.17.0",
]
alignment = [
    "logfire",
    "silero-vad",
    "pyannote.audio",
]

[tool.uv]
# Pin torch to the cu124 / 2.5 line. Why this line:
#   * torchaudio 2.5 still ships AudioMetaData + list_audio_backends, so
#     pyannote.audio 3.4 imports cleanly without our compatibility shims.
#   * torch 2.5 predates the weights_only=True default flip in 2.6, so
#     pyannote model loads work out of the box.
#   * No torchcodec dependency at this version.
#   * cu124 wheels declare their nvidia-cuda-runtime-cu12 / nvidia-cublas-cu12
#     deps, so uv resolves the full CUDA runtime alongside torch (the cu126
#     wheels did not, leading to libcublas.so / libcudart.so import failures).
#   * Works on Ada (sm_89, 4070 Ti SUPER) and earlier architectures.
constraint-dependencies = [
    "onnxruntime<1.24",
    "numpy<2",
    "transformers<4.46",
    "torch>=2.5,<2.6",
    "torchaudio>=2.5,<2.6",
]
find-links = [
    "https://download.pytorch.org/whl/cu124",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "requires_silero: needs silero-vad and torch installed",
    "requires_pyannote: needs pyannote.audio installed and FW_HF_TOKEN set",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["foreign_whispers"]
